test/semantic_errors/invalid_assignment10.mc
void main() {
    int a[5];
    int b[6];
    a[4] = b; /* cannot assign array to int */
}